syntax = "proto3";

package messages;

option java_package = "org.flippers.messages";
option java_outer_classname = "MessageProtos";

message Message {

    MessageType type = 1;
    string sequenceNumber = 3;
    NodeInfo sender = 4;
    repeated NodeInfo nodesInfo = 5;

    enum MessageType {
        PING = 0;
        ACK = 1;
        PING_NODE = 2;
        JOIN = 3;
        LEAVE = 4;
    };

}

message NodeInfo {

    string ipAddress = 1;
    string nodeId = 2;
    int32 port = 3;
    InfoType type = 4;

    enum InfoType {
        ALIVE = 0;
        JOINED = 1;
        SUSPECT = 2;
        DEAD = 3;
        LEFT = 4;
        MEMBER = 5;
    }

}